# Enterprise

./: .gitignore  .gitmodules  CMakeLists.txt  Enterprise_dev.sln  README.md  cmake-variants.yaml  cpp.hint  gendocs_mac.command  gendocs_win.bat  premake5.lua
Editor/: CMakeLists.txt
Editor/content/: Example.txt
Editor/resources/: EmbedAppIcon.rc  Enterprise.icns
Editor/src/: EntryPoint_Win32.cpp  EntryPoint_macOS.mm  Runtime.cpp  Runtime.h
Editor/src/Layouts/: SceneEditor.cpp  SceneEditor.h
Editor/src/Views/: Content.cpp  Content.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  Scene.cpp  Scene.h
Editor/src/Window/: Window.cpp  Window.h  Window_Win32.cpp  Window_macOS.mm
Engine/: CMakeLists.txt
Engine/doxygen/: Architecture.md  Assertions.md  Programming.md
Engine/doxygen/Systems/: Audio.md  Events.md  Graphics.md  Input.md  StateManager.md
Engine/include/Enterprise/: Application.h  Core.h  Enterprise.h  Events.h  File.h  GameEntryPoint.h  Graphics.h  Input.h  Runtime.h  SceneManager.h  StateManager.h  Time.h  Window.h
Engine/include/Enterprise/Application/: Application.h
Engine/include/Enterprise/Core/: Assertions.h  Console.h  ErrorMessageBox.h  Exceptions.h  HashNames.h  SharedLibraryExports.h  Win32APIHelpers.h
Engine/include/Enterprise/Events/: Events.h
Engine/include/Enterprise/File/: File.h  INIValueType.h
Engine/include/Enterprise/Graphics/: Graphics.h  OpenGLHelpers.h  Window.h
Engine/include/Enterprise/Input/: ControlIDs.h  Input.h
Engine/include/Enterprise/Runtime/: GameModuleLoad.h
Engine/include/Enterprise/SceneManager/: SceneManager.h
Engine/include/Enterprise/StateManager/: StateManager.h
Engine/include/Enterprise/Systems/: Renderer2D.h
Engine/include/Enterprise/Time/: Time.h
Engine/include_glsl/: BatchedTextures.glsl  Enterprise.glsl
Engine/src/Application/: Application.cpp  EntryPoint_Win32.cpp  EntryPoint_macOS.mm
Engine/src/Core/: Console_Win32.cpp  Console_macOS.cpp  ErrorMessageBox_Win32.cpp  ErrorMessageBox_macOS.mm  HashNames.cpp  Win32APIHelpers.cpp
Engine/src/Events/: Events.cpp
Engine/src/File/: File.cpp  File_Win32.cpp  File_macOS.mm  INIReader.cpp  INIWriter.cpp
Engine/src/Graphics/: Framebuffers.cpp  GlobalShaderVars.cpp  Graphics.cpp  OpenGLHelpers.cpp  Shaders.cpp  Textures.cpp  VertexArrays.cpp  Window_Win32.cpp  Window_macOS.mm
Engine/src/Input/: Input.cpp  Input_Win32.cpp  Input_macOS.mm
Engine/src/Runtime/: EntryPoint_Win32.cpp  EntryPoint_macOS.mm  GameEntryPoint.cpp  GameModuleLoad.cpp  Runtime.cpp
Engine/src/SceneManager/: SceneManager.cpp
Engine/src/StateManager/: StateManager.cpp
Engine/src/Systems/Renderer2D/: R2D_Sprites.cpp  R2D_Text.cpp  Renderer2D.cpp
Engine/src/Time/: Time.cpp  Time_Win32.cpp  Time_macOS.cpp
Enterprise/: Enterprise.vcxproj  Enterprise.vcxproj.filters  cpp.hint
Enterprise/_vendor/CTSpookyHash/: pm_library.lua
Enterprise/_vendor/CTSpookyHash/src/: CTSpooky.cpp
Enterprise/_vendor/Glad/: pm_library.lua
Enterprise/_vendor/SpookyHash/: pm_library.lua
Enterprise/_vendor/SpookyHash/src/: SpookyV2.cpp
Enterprise/_vendor/stb_image/: pm_library.lua
Enterprise/_vendor/stb_image/src/: stb_image.cpp
Enterprise/doxygen/: Architecture.md  Assertions.md  Console.md  Introduction.md  Programming.md
Enterprise/doxygen/Systems/: ECS.md  Events.md  File.md  Input.md  SceneManager.md  Systems.md  Time.md
Enterprise/doxygen/_build/: Doxyfile  main_redirect.html
Enterprise/engineshaders/: DistanceFields.glsl  Enterprise.glsl
Enterprise/src/: Core.h  EP_PCH.cpp  EP_PCH.h  Enterprise.h
Enterprise/src/Enterprise/: Application.cpp  Application.h  Console.cpp  Console.h  EntryPoint.h  Log.cpp  Log.h
Enterprise/src/Enterprise/Application/: Application.cpp  Application.h  ApplicationEvents.cpp  ApplicationEvents.h  Console.cpp  Console.h  EntryPoint.h  Game.h  Window.h
Enterprise/src/Enterprise/Core/: Assert.h  Assertions.h  Console.h  ErrorMessageBox.h  Exceptions.h  HashNames.cpp  HashNames.h
Enterprise/src/Enterprise/Event/: ApplicationEvent.h  Dispatcher.cpp  Dispatcher.h  Event.h  EventCategoryList.h  EventClasses.h  EventTypeList.h  KeyEvent.h  MouseEvent.h
Enterprise/src/Enterprise/Events/: BaseEvent.h  CoreEvents.h  CoreEvents_CategoryList.h  CoreEvents_TypeList.h  Dispatcher.cpp  Dispatcher.h  ECL_Core.h  ETL_Core.h  ETL_Core.txt  EventClasses.h  EventDefinitions.cpp  Events.cpp  Events.h
Enterprise/src/Enterprise/File/: File.cpp  File.h  INI.cpp  INIReader.cpp  INIValueType.h  INIWriter.cpp
Enterprise/src/Enterprise/Graphics/: Framebuffers.cpp  GlobalShaderVars.cpp  Graphics.cpp  Graphics.h  Math.cpp  Math.h  Matrices.cpp  OpenGLHelpers.cpp  OpenGLHelpers.h  QuadBatch.cpp  R2D.cpp  Shaders.cpp  Textures.cpp  VertexArrays.cpp  Viewports.cpp  Window.h  WindowEvents.cpp  WindowEvents.h
Enterprise/src/Enterprise/Input/: ControlIDs.h  Events.h  Input.cpp  Input.h  InputEvents.cpp  InputEvents.h
Enterprise/src/Enterprise/SceneManager/: SceneManager.cpp  SceneManager.h
Enterprise/src/Enterprise/StateManager/: StateManager.cpp  StateManager.h
Enterprise/src/Enterprise/Systems/: Renderer2D.h
Enterprise/src/Enterprise/Time/: Time.cpp  Time.h
Enterprise/src/Platform/Multi/: ErrorMessageBox.cpp  ErrorMessageBox.h
Enterprise/src/Platform/Windows/: Win32Console.cpp  (+4 more)
Launcher/: CMakeLists.txt
Launcher/src/: EntryPoint_Win32.cpp  EntryPoint_macOS.mm  Runtime.cpp  Runtime.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/_resources/macOS/: Info.plist
Sandbox/src/: ClientCallbacks.cpp  Constants.cpp  Sandbox.cpp
Sandbox/src/Events/: ECL_Sandbox.h  ETL_Sandbox.h  SandboxETL.h  SandboxEvents.h  SandboxEvents_CategoryList.h  SandboxEvents_TypeList.h
TestGame/: CMakeLists.txt  TestGame.epproj  TestGame.eproj
TestGame/content/: Example.txt
TestGame/resources/: EmbedAppIcon.rc  Info.plist.in  TestGame.icns
TestGame/src/: TestGame.cpp
_Scripts/: pm_Mac_XCode11.command  pm_Win32_VS2019.bat
_scripts/: gendocs_Mac.command  gendocs_Win32.bat  pm_Mac_XCode11.command  pm_Win32_VS2019.bat  template.xcscheme
(+39 files in other folders)
